--- a/conf/application.conf
+++ b/conf/application.conf
@@ -177,8 +177,8 @@ attachments.path=data/attachments
 
 # Or, specify mail host configuration
   mail.smtp.host=smtp.gmail.com
-  mail.smtp.user=munich.cssa@gmail.com
-  mail.smtp.pass=cambridge123321
+  mail.smtp.user=info@cssa-munich.de
+  mail.smtp.pass=Cssa2015#
   mail.debug=true
   mail.smtp.channel=ssl
 
